--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "strona_moja_kalifornia",
+  "name": "strona_portfolio",
   "version": "1.0.0",
-  "description": "awesome blog website about california lifestyle",
+  "description": "Website with my web development portfolio",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "Arthur Strzewiczek",
-  "license": "ISC",
-  "devDependencies": {
-    "lite-server": "2.5.4"
-  }
+  "license": "ISC"
 }
