--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
   "author": "Arthur Strzewiczek",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "node-modules": "^1.0.1"
-  }
+  },
+  "devDependencies": {
+    "webpack-cdn-plugin": "^3.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Strevitz/strevitz-portfolio.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Strevitz/strevitz-portfolio/issues"
+  },
+  "homepage": "https://github.com/Strevitz/strevitz-portfolio#readme"
 }
